# streamlit-portfolio

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
tests/: test_smoke.py
