[project]
name = "streamlit-portfolio"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aaron Isaacs", email = "isaacsaaron@gmail.com"},
]
dependencies = ["streamlit[pdf]>=1.57.0", "watchdog>=6.0.0", "pip-system-certs>=5.3", "pandas>=3.0.2", "plotly>=6.7.0"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
